--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BeaconSquareTest</string>
     <string name="action_settings">Settings</string>
+    <string name="hint_height">Height</string>
+    <string name="hint_width">Width</string>
 </resources>
