--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="action_settings">Settings</string>
     <string name="hint_height">Height</string>
     <string name="hint_width">Width</string>
+    <string name="unique_beacons_text">Unique beacons</string>
+    <string name="total_data_text">Total data written</string>
+    <string name="avg_rssi">Avg. RSSI</string>
+    <string name="min_rssi">Min. RSSI</string>
+    <string name="max_rssi">Max. RSSI</string>
 </resources>
