--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="avg_rssi">Avg. RSSI</string>
     <string name="min_rssi">Min. RSSI</string>
     <string name="max_rssi">Max. RSSI</string>
+    <string name="hint_testTime">Test Time</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
