added menu entry to delete all test data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="min_rssi">Min. RSSI</string>
     <string name="max_rssi">Max. RSSI</string>
     <string name="hint_testTime">Test Time</string>
+    <string name="action_delete">Delete all test data</string>
 </resources>
