--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="max_rssi">Max. RSSI</string>
     <string name="hint_testTime">Test Time</string>
     <string name="action_delete">Delete all test data</string>
+    <string name="action_new_test">New test</string>
 </resources>
